# sample_templates

./: CMakeLists.txt
Common/: IRunnable.h  IStartable.h  NullableValue.h  Startable.h
Common/tests/: NullableValueTests.cpp
Dispatcher/: Dispatcher.h  IDispatcherListener.h
Dispatcher/tests/: DispatcherTests.cpp  IDispatcherListenerMock.h
FSM/: EStateId.h  IActionListener.h  IState.h  IStateChangeHandler.h  IStateFactory.h  IStateListener.h  states.puml
FSM/Impl/: ClosedState.cpp  ClosedState.h  EStateId.h  InitialState.cpp  InitialState.h  InitializationState.cpp  InitializationState.h  OpenedState.cpp  OpenedState.h  ShutdownState.cpp  ShutdownState.h  State1.cpp  State1.h  State2.cpp  State2.h  State3.cpp  State3.h  StateBase.h  StateFactory.cpp  StateFactory.h  StateMachine.cpp  StateMachine.h
FSM/tests/: CloseStateTests.cpp  IDeviceMock.h  IStateChangeHandlerMock.h  InitializationStateTests.cpp  OpenStateTests.cpp  ShutdownStateTests.cpp  StateMachineTests.cpp
Qt/: CMakeLists.txt
Queue/: IMessageQueue.h  IMessageQueueMock.h  MessageQueueBase.h
Subscription/: INotifier.h  ISubscriber.h  Notifier.h  Subscriber.h
Subscription/Impl/: NotifierImpl.h  NotifierStaticImpl.h  SubscriberImpl.h
Subscription/Sample/: Handler.cpp  Handler.h  Subscriber2Sample.cpp  Subscriber2Sample.h  SubscriberExt.cpp  SubscriberExt.h
src/Dispatcher/: DeferredLaunch.h  Dispatcher.h
src/Dispatcher/tests/: DeferredLaunchTests.cpp  DispatcherTests.cpp
src/FSM/: IStateChangeHandler.h  IStateFactory.h
src/FSM/Impl/: ClosedState.cpp  ClosedState.h  EStateId.h  InitialState.cpp  InitialState.h  InitializationState.cpp  InitializationState.h  OpenedState.cpp  OpenedState.h  ShutdownState.cpp  ShutdownState.h  StateBase.h  StateFactory.h  StateMachine.h
src/FSM/tests/: CloseStateTests.cpp  IDeviceMock.h  IStateChangeHandlerMock.h  InitializationStateTests.cpp  OpenStateTests.cpp  ShutdownStateTests.cpp  StateMachineTests.cpp
src/Queue/: MessageQueueBase.h
src/Settings/: Settings.h
src/Subscription/: HandlerNotifier.h  ISubscriber.h
src/Threading/: IRunnable.h  IStartable.h  Startable.h
